<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slightGrey"
    tools:context="com.pointofsalesandroid.androidbasedpos_inventory.ProfileManagement">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/profileManagement"
        app:titleTextColor="@color/colorWhite" />

    <ScrollView

        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.49">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/bannerHeight"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bgblurer" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/store_profile_icon">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:id="@+id/store_profile_label"
                        android:background="@color/colorAccent"
                        android:layout_height="50dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="Store Informations"
                            android:textColor="#ffffff"
                            />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:width="200dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/butoon_save"
                        android:text="@string/btn_save_profile"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_store_type" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/field_store_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:hint="@string/field_Store_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/store_profile_label">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_store"
                            android:drawablePadding="5dp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:id="@+id/field_address"
                        android:layout_marginTop="8dp"
                        android:hint="@string/field_store_address"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/field_store_name">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_store_address" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:id="@+id/field_contact"
                        android:layout_marginTop="8dp"
                        android:hint="@string/contact_hint"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/field_address">


                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_contancts" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/label_store_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="16dp"
                        android:text="Store Type"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/field_contact" />
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/field_contact"
                        app:layout_constraintLeft_toRightOf="@id/label_store_type"
                        android:layout_marginLeft="24dp"
                        android:src="@drawable/ic_restaurant"
                        android:id="@+id/ic_restaurant"
                        android:padding="5dp"
                        />
                    <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@id/field_contact"
                            app:layout_constraintLeft_toRightOf="@id/ic_restaurant"
                            android:layout_marginLeft="8dp"
                            android:src="@drawable/ic_store"
                            android:padding="5dp"
                        />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/store_profile_icon"
                android:layout_width="@dimen/profileICon"
                android:layout_height="@dimen/profileICon"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/store_profile"
                app:civ_border_color="@color/colorIcon"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.17000002" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
